# task-processing-platform

./: README.md  pyproject.toml  requirements.txt
examples/: tasks.json
src/: demo_execution.py  main.py  processing_simulation.py
src/common/: constants.py  logging_config.py
src/core/: async_task_queue.py  descriptors.py  enums.py  executor.py  models.py  task_queue.py
src/core/exceptions/: executor_errors.py  task_errors.py  task_queue_errors.py
src/handlers/: failing_handler.py  print_handler.py
src/protocols/: handler.py  sources.py
src/services/: loader.py  validation.py
src/sources/: API_stub_source.py  file_source.py  generator_source.py
tests/: conftest.py  test_processing_simulation.py
tests/core/: test_async_task_queue.py  test_descriptors.py  test_executor.py  test_models.py  test_task_model.py  test_task_queue.py
tests/services/: conftest.py  test_loader.py  test_validation.py
tests/sources/: conftest.py  test_API_stub_source.py  test_file_source.py  test_generator_source.py
