[project]
name = "task processing platform"
version = "1.0.0"
description = "async task execution"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0"
]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "src/common/logging_config.py",
    "src/main.py",
    "src/demo_execution.py",
]
