[project]
name = "task-processing-platform"
version = "1.0.0"
description = "async task execution"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0"
]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/logging_config.py",
    "*/main.py",
    "*/demo_execution.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
